fix: make it somewhat readable

--- a/apps/neko-terebi-app/index.css
+++ b/apps/neko-terebi-app/index.css
@@ -23,6 +23,4 @@
 
 :focus {
   outline: none;
-  background: pink;
-  color: black;
 }
